--- a/.github/workflows/python-app11.yml
+++ b/.github/workflows/python-app11.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
-    branches: [ "mainr" ]
+    branches: [ "main" ]
 
 permissions: write-all
 
